--- a/index.html
+++ b/index.html
@@ -76,13 +76,17 @@
     <script type="text/javascript" src="js/vendor/offline/offline.min.js"></script>
     <script type="text/javascript" src="js/vendor/IndexedDBShim.min.js"></script>
     <script type="text/javascript">
-        require(["config/templateConfig", "application/template", "application/main"], function (templateOptions, Template, Main) {
+        require(["config/templateConfig", "application/template", "application/main", "esri/urlUtils"], function (templateOptions, Template, Main, urlUtils) {
             // start template
             var myTemplate = new Template(templateOptions);
             // create my main application. Start placing your logic in the main.js file.
             var myApp = new Main();
             // create my main application. Start placing your logic in the main.js file.
             myTemplate.startup().then(function (config) {
+                urlUtils.addProxyRule({
+                    urlPrefix: "gis.baycountyfl.gov/arcgis",
+                    proxyUrl: config.proxyurl
+                });
                 //The config object contains the following properties: helper services, (optionally)
                 //i18n, appid, webmap and any custom values defined by the application.
                 //In this example we have one called theme.
@@ -111,7 +115,7 @@
             });
         });
     </script>
-    <!-- Google Analytics -->
+    <!-- Google Analytics for esri -->
     <script type="text/javascript">
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-215788-4']);
@@ -126,6 +130,17 @@
             var s = document.getElementsByTagName('script')[0];
             s.parentNode.insertBefore(ga, s);
         })();
+    </script>
+    <!-- Google Analytics for county -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-76047555-23', 'auto');
+      ga('send', 'pageview');
+
     </script>
 </body>
 
